// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component renders correctly closable 1`] = `
<Styled(View)
  color="blue"
  onCloseClick={[MockFunction]}
>
  <Styled(View)>
    <Icon
      allowFontScaling={false}
      color="blue"
      name="info"
      size={28}
    />
  </Styled(View)>
  <Styled(View)>
    <Text>
      <Styled(Text)
        color="blue"
      >
        <FormattedMessage
          id="title_id"
        />
      </Styled(Text)>
      <Styled(Text)
        color="blue"
      >
        <FormattedMessage
          id="subtitle_id"
        />
      </Styled(Text)>
    </Text>
    <Styled(Text)
      color="blue"
    >
      <FormattedMessage
        id="message_id"
      />
    </Styled(Text)>
  </Styled(View)>
  <Styled(Component)
    onPress={[MockFunction]}
  >
    <Icon
      allowFontScaling={false}
      color="blue"
      name="cross"
      size={28}
    />
  </Styled(Component)>
</Styled(View)>
`;

exports[`Alert component renders correctly default 1`] = `
<Styled(View)
  color="blue"
>
  <Styled(View)>
    <Icon
      allowFontScaling={false}
      color="blue"
      name="info"
      size={28}
    />
  </Styled(View)>
  <Styled(View)>
    <Text>
      <Styled(Text)
        color="blue"
      >
        <FormattedMessage
          id="title_id"
        />
      </Styled(Text)>
      <Styled(Text)
        color="blue"
      >
        <FormattedMessage
          id="subtitle_id"
        />
      </Styled(Text)>
    </Text>
    <Styled(Text)
      color="blue"
    >
      <FormattedMessage
        id="message_id"
      />
    </Styled(Text)>
  </Styled(View)>
</Styled(View)>
`;

exports[`Alert component renders correctly with action button 1`] = `
<Styled(View)
  color="blue"
  onCloseClick={[MockFunction]}
>
  <Styled(View)>
    <Icon
      allowFontScaling={false}
      color="blue"
      name="info"
      size={28}
    />
  </Styled(View)>
  <Styled(View)>
    <Text>
      <Styled(Text)
        color="blue"
      >
        <FormattedMessage
          id="title_id"
        />
      </Styled(Text)>
      <Styled(Text)
        color="blue"
      >
        <FormattedMessage
          id="subtitle_id"
        />
      </Styled(Text)>
    </Text>
    <Styled(Text)
      color="blue"
    >
      <FormattedMessage
        id="message_id"
      />
    </Styled(Text)>
    <Styled(Component)
      color="blue"
      onPress={[MockFunction]}
    >
      <Styled(Icon)
        color="[mocked white]"
        name="video"
        size={28}
      />
      <Styled(Text)>
        <FormattedMessage
          id="testActionTextId"
        />
      </Styled(Text)>
    </Styled(Component)>
  </Styled(View)>
  <Styled(Component)
    onPress={[MockFunction]}
  >
    <Icon
      allowFontScaling={false}
      color="blue"
      name="cross"
      size={28}
    />
  </Styled(Component)>
</Styled(View)>
`;

exports[`Alert component renders correctly with string data 1`] = `
<Styled(View)
  color="blue"
>
  <Styled(View)>
    <Icon
      allowFontScaling={false}
      color="blue"
      name="info"
      size={28}
    />
  </Styled(View)>
  <Styled(View)>
    <Text>
      <Styled(Text)
        color="blue"
      >
        test title
      </Styled(Text)>
      <Styled(Text)
        color="blue"
      >
        test title
      </Styled(Text)>
    </Text>
    <Styled(Text)
      color="blue"
    >
      test message
    </Styled(Text)>
  </Styled(View)>
</Styled(View)>
`;

exports[`Alert component renders correctly without subtitle 1`] = `
<Styled(View)
  color="blue"
>
  <Styled(View)>
    <Icon
      allowFontScaling={false}
      color="blue"
      name="info"
      size={28}
    />
  </Styled(View)>
  <Styled(View)>
    <Text>
      <Styled(Text)
        color="blue"
      >
        <FormattedMessage
          id="title_id"
        />
      </Styled(Text)>
    </Text>
    <Styled(Text)
      color="blue"
    >
      <FormattedMessage
        id="message_id"
      />
    </Styled(Text)>
  </Styled(View)>
</Styled(View)>
`;
